Remove unsupported recommends from rpm config
electron-builder rpm target doesn't support recommends, move dfu-util to depends.

--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
       "recommends": ["dfu-util"]
     },
     "rpm": {
-      "depends": ["hidapi", "libusb1"],
-      "recommends": ["dfu-util"]
+      "depends": ["hidapi", "libusb1", "dfu-util"]
     },
     "pacman": {
       "depends": [
